# eventBased_worldModels

./: .gitignore  README.md
ball_simulator/: README.md  pyproject.toml  trajectories.h5
ball_simulator/configs/: poc.yaml
ball_simulator/src/ball_simulator/: __init__.py  cli.py  config.py  dataset_geometry.py  environments.py  generator.py  integrators.py  models.py  physics.py  regime_inspection.py  sampling.py  simulator.py  storage.py  trajectory.py  visualization.py
ball_simulator/tests/: conftest.py  test_regime_inspection.py  test_simulator.py  test_visualisation.py
ball_simulator/tests/data/: single_wall_dataset.h5  smoke_dataset.h5  u_box_dataset.h5
