[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ball-simulator"
version = "0.1.0"
description = "Synthetic 6-DoF sphere-wall collision trajectories for world-model research"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0,<2.3",
  "scipy>=1.14",
  "h5py>=3.11",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "tqdm>=4.66",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
ball_simulator = "ball_simulator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ball_simulator"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
